# mediasoup-cpp

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
demo/: CMakeLists.txt  main.cpp
mediasoup/: CMakeLists.txt  Channel.cpp  Channel.hpp  EventEmitter.cpp  EventEmitter.hpp  IMediasoup.hpp  IMediasoupEngine.hpp  IWorker.hpp  Logger.cpp  Logger.hpp  Mediasoup.cpp  Mediasoup.hpp  MediasoupEngine.cpp  MediasoupEngine.hpp  Promise.hpp  RtpParameters.hpp  SupportedRtpCapabilities.cpp  Worker.cpp  Worker.hpp  version.hpp
mediasoup/common/: CommonObserver.hpp
mediasoup/util/: Logger.hpp  Process.cpp  Process.hpp
mediasoup/uv/: UVPipeWrapper.cpp  UVPipeWrapper.hpp
worker/: CMakeLists.txt
